# geant4-cherenkov

./: CMakeLists.txt  analiz.ipynb  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  MaterialManager.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: run.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  MaterialManager.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
